# pfilter

./: CMakeLists.txt  CMakePresets.json  cmake_install.cmake  pfilter.code-workspace  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
include/: Filter.cu  I_2DFilter.h  I_Filter  I_Filter.h  Particle.cu
kernels/: CMakeLists.txt  Filter.cu  Particle.cu  Particle.cuh
src/: CMakeLists.txt  Makefile  cmake_install.cmake
test/: CMakeLists.txt  TestParticle.cpp
testNVCC/: CMakeLists.txt
